--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy
 scipy
 h5py
 pandas
-seaborn
+seaborn==0.12.1
 matplotlib
 scikit-learn
 scikit-learn-extra
@@ -13,3 +13,4 @@ apricot-select==0.6.1
 rdkit
 mordred==1.2.0
 torch==1.11.0
+torch-geometric==2.4.0
